# expression_parser_polyglot

./: README.md
elixir/: .gitignore  mix.exs
elixir/config/: config.exs
elixir/lib/: expression_parser.ex  expression_parser_native.ex
elixir/native/expression_parser_native/: Cargo.toml  README.md
elixir/native/expression_parser_native/src/: lib.rs
elixir/test/: expression_parser_native_test.exs  expression_parser_test.exs
python/: .gitignore  Cargo.toml  example.py  run.bat
python/expression_parser_python/: __init__.py  expression_parser_python.cp38-win_amd64.pyd
python/src/: lib.rs
python/tests/: parse_and_eval_test.py
www/: Cargo.toml  index.js  package-lock.json  package.json
www/src/: lib.rs
